0.0.3
Shows and mounts disk according to diskIncludePattern and diskExcludePattern ( to be set in prefs when done ).
Added left pane for disks.
Closing last tab reopens tab at ~.
Added close button to tab.
Tab label is now set to folder name.
'New' now opens new tab in same directory as active tab.

0.0.2
Added 'Delete' code to context menu.
Folder monitoring now works properly.
Started dand.
Launch file from location bar now works.
Location bar auto complete traps 'TAB' key to complete, 'RETURN' to go.
Now chaches some common mimetypes on startup.
Added new file/folder context menu.
Made gtk3 compatable.
Added better folder change monitoring.
Code clean.
Added multiple tabs.
Added folder montitor changes.
Added symlink and broken link emblems to icons.
Home, Up buttons now fill in location bar as well.
Entering non-existant folder path in location bar now does nothing.
Arrow key and return now work as expected on location entry completion.
Location completion added.
Location bar added.
Home button added.
Up button added.
Basic functionality.

0.0.1
First commit.