@@ -1,4 +1,5 @@
 0.0.3
+Started prefs.
 Shows and mounts disk according to diskIncludePattern and diskExcludePattern ( to be set in prefs when done ).
 Added left pane for disks.
 Closing last tab reopens tab at ~.
